--- a/src/Login.fxml
+++ b/src/Login.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="332.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login_Controller">
+<AnchorPane prefHeight="332.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login_ControllerView">
     <AnchorPane prefHeight="332.0" prefWidth="506.0">
         <GridPane alignment="center" hgap="10" layoutX="227.0" prefHeight="332.0" prefWidth="279.0" vgap="10">
             <Text text="Registration" wrappingWidth="238.56372833251953" GridPane.columnSpan="2" GridPane.rowIndex="1">
