--- a/src/chat/chat.fxml
+++ b/src/chat/chat.fxml
@@ -11,13 +11,13 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chat.ClientGuiController">
     <left>
         <AnchorPane prefHeight="270.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <Label fx:id="errorLabel" layoutX="15.0" layoutY="239.0" prefHeight="18.0" prefWidth="165.0" />
             <Label fx:id="chatLabel" layoutX="18.0" layoutY="16.0" text="chat:" />
-         <Button fx:id="startButton" layoutX="18.0" layoutY="360.0" mnemonicParsing="false" onAction="#startBotClientButton" prefHeight="26.0" prefWidth="108.0" text="Play" />
+            <Button fx:id="startButton" layoutX="18.0" layoutY="360.0" mnemonicParsing="false" onAction="#startBotClientButton" prefHeight="26.0" prefWidth="108.0" text="Play" />
         </AnchorPane>
     </left>
     <center>
         <AnchorPane prefHeight="303.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <Label fx:id="errorLabel" layoutX="207.0" layoutY="386.0" prefHeight="14.0" prefWidth="212.0" textAlignment="RIGHT" />
             <TextField fx:id="messageField" layoutX="-182.0" layoutY="312.0" onAction="#sendMessageButton" prefHeight="26.0" prefWidth="602.0" />
             <TextField fx:id="nameField" layoutX="208.0" layoutY="359.0" onAction="#loginButton" prefHeight="26.0" prefWidth="211.0" />
             <Button fx:id="loginButton" layoutX="448.0" layoutY="359.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="26.0" prefWidth="108.0" text="Login" />
