--- a/src/chat/Chat.fxml
+++ b/src/chat/Chat.fxml
@@ -6,7 +6,8 @@
 <?import java.net.URL?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16">
+            prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16"
+            fx:controller="chat.ClientGuiController">
     <center>
         <AnchorPane prefHeight="303.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <TextField fx:id="messageField" layoutX="20.0" layoutY="312.0" onAction="#sendMessageButton"
